Reconnect access point signals when active access point changes.

BUG: 283663
FIXED-IN: 0.9.0_beta2